<b>Version 1.00:</b> Ahh finally a release, and a huge update along with it.<br/><br/>
    &#8226; Added a very powerful 'Theme Engine' for developers (https://github.com/lklinker/talon_theme)<br/>
    &#8226; Added live streaming to the main timeline<br/>
    &#8226; Redesigned the tweet viewer to use a ViewPager. Allows for more dynamic content<br/>
    &#8226; Talon Pull service for "push notification" functionality on interactions<br/>
    &#8226; Added a tutorial after login<br/>
    &#8226; Added a 'Hangouts' layout option as a default theme<br/>
    &#8226; Open multiple links from the tweet activity<br/>
    &#8226; Option to enable favorite user notifications<br/>
    &#8226; Mentions notifications for second account<br/>
    &#8226; Convert the search to the action bar instead of drawer<br/>
    &#8226; New notification icon<br/>
    &#8226; Save images from the photo viewer<br/>
    &#8226; Option to show Twitter handles instead of names on the timelines<br/>
    &#8226; Revamped the login to alleviate any problems<br/>
    &#8226; Higher quality instagram pictures<br/>
    &#8226; Added a do not disturb time setting to block Talon's notifications<br/>
    &#8226; Any links that you open from a tweet will now open to my full screen browser first, then you can open them in the default browser from the Action bar<br/>
    &#8226; Applied the holo orange theme though out the rest of the ui<br/>
    &#8226; Added Pebble notifications<br/>
    &#8226; Changed the main drawer around<br/>
    &#8226; Added to the 'Get Help' and 'Other Apps' section of settings<br/>
    &#8226; Tweaks to style and performance across the board<br/><br/>
<br/>

<b>Version 0.80:</b> Cause Brandal has cool ideas too<br/><br/>
    &#8226; Added a real icon! Still need a notifications one<br/>
    &#8226; Added a pictures and links tab to the main page (optional)<br/>
    &#8226; Added a windowed photo view with a click on the pictures<br/>