@@ -33,4 +33,10 @@
           android:orderInCategory="6"
           android:title="@string/menu_save_image"
           android:showAsAction="never"  />
+
+    <item android:id="@+id/menu_spam"
+          android:title="@string/menu_spam"
+          android:orderInCategory="7"
+          android:showAsAction="never" />
+
 </menu>
